--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<mat-toolbar class="app-toolbar" color="primary">
+<mat-toolbar style="padding-top: 0px" class="app-toolbar" color="primary">
   <span>RAMANUJAN CLUB</span>
 </mat-toolbar>
-
-
 <router-outlet></router-outlet>
