Added Verification Workflow, Master Question workflow

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,11 +19,11 @@
       <h5 class="card-title">QUESTION LISTING</h5>
       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
       <span>
-      <a href="#" class="btn btn-primary">View Questions</a>
+      <a href="/verify" class="btn btn-primary">Verify Questions</a>
     </span>
-      <span style="padding-left:10px">
+      <!--<span style="padding-left:10px">
       <a href="#" class="btn btn-primary">Edit Questions</a>
-    </span>
+    </span>-->
     </div>
   </div>
 
